[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Menu principal/creditos-boton.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Menu principal/creditos-hover.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Menu principal/salir-hover.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Menu principal/jugar-boton.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Menu principal/jugar-hover.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Menu principal/salir-boton.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Menu principal/fondo.jpg" type="Texture" id=8]
[ext_resource path="res://Sprites/Menu principal/creditos.png" type="Texture" id=9]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fondo" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 0.9
margin_top = -54.0
mouse_filter = 0
custom_constants/separation = 80
alignment = 1

[node name="Play" type="TextureButton" parent="HBoxContainer"]
margin_left = 501.0
margin_right = 674.0
margin_bottom = 54.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Salir" type="TextureButton" parent="HBoxContainer"]
margin_left = 754.0
margin_right = 927.0
margin_bottom = 54.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 4 )

[node name="Creditos" type="TextureButton" parent="HBoxContainer"]
margin_left = 1007.0
margin_right = 1180.0
margin_bottom = 54.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="Creditos" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
[connection signal="pressed" from="HBoxContainer/Play" to="." method="play_pressed"]
[connection signal="pressed" from="HBoxContainer/Salir" to="." method="play_pressed"]
[connection signal="pressed" from="HBoxContainer/Salir" to="." method="_on_Salir_pressed"]
[connection signal="pressed" from="HBoxContainer/Creditos" to="." method="_on_Creditos_pressed"]
